--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,8 @@
 server.servlet.context-path=/api/v1
 
 # Spring datasource	
-spring.datasource.url=jdbc:mysql://localhost:3306/ava
+spring.datasource.url=jdbc:mysql://database:3306/ava
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Passw0rd!
 
-# Hibernate ddl auto
 spring.jpa.hibernate.ddl-auto=none
