--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,10 @@ version: '3.1'
 
 services:
   database:
-    image: healthcheck/mysql
-#    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:5.7
     command: --init-file /data/application/init.sql
     volumes:
         - ./init.sql:/data/application/init.sql
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Passw0rd!
       MYSQL_ROOT_HOST: '%'
